Fix logo size: crop whitespace with negative margins

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -70,9 +70,10 @@ header h1 {
 }
 
 .logo-img {
-  height: 90px;
+  height: 280px;
   width: auto;
   display: block;
+  margin: -110px 0;
 }
 
 .tagline {
